--- a/ripx/index.html
+++ b/ripx/index.html
@@ -35,20 +35,34 @@
                     }
                 }
             });
+            $("body").css("overflow","hidden");
+
+            setTimeout(function() {
+                /*var height=$(".category_thumbnail>img").height()
+                */
+
+                $(".loading").fadeOut(1000);
+                var body = document.getElementById("body");
+                $('#body').css('overflow','visible');
+                $("body").css("overflow","visible");
+
+            }, 2100);
 
         });
     </script>
 </head>
 <body>
+<div id="body">
+<div class="loading"><img style="width:100% ;height:100%;" src="https://i.ytimg.com/vi/ThG1lC7P824/maxresdefault.jpg"/></div>
 <div class="menu_box">
     <div class="menu_inner">
         <div class="logo"><a href="#section01">FMW - ONEPAGE</a></div>
         <ul>
-            <li><a href="#section01">LIFE</a></li>
-            <li><a href="#section02">LIFE AS A SINGER</a></li>
+            <li><a href="#section01">HE' LIFE</a></li>
+            <li><a href="#section02">MUSIC STYLE</a></li>
             <li><a href="#section03">ALBUM</a></li>
-            <li><a href="#section04">MENU04</a></li>
-            <li><a href="#section05">MENU05</a></li>
+            <li><a href="#section04">AFTER HIS DEATH</a></li>
+            <li><a href="#section05">ETC</a></li>
         </ul>
     </div>
 </div>
@@ -63,10 +77,12 @@
                 regardless of the negative public opinion associated with my name<br>
                 I don't care if people say bad things to me. I don't even care about X.<br>
                 Because I know the goals of my life, <br>and I know what I have to do for everyone.<br>
-                Because I know what message to send.</h2>
+                Because I know what message to send.
+            </h2>
         </div>
 
 <div id="section01">
+   
     <h1>HE'S LIFE</h1>
         <div class="middle_content">
             <div class="img_content">
@@ -156,8 +172,94 @@
 
 
 </div>
-    <div id="section02">
-        <h1>LIFE AS A SINGER</h1>
+    <div id="section02" style="margin-top:300px;">
+        <h1>MUSIC STYLE</h1>
+        <div class="middle_content" style="height:1900px;">
+            <div class="img_content">
+                <div class="content_array">
+                    <div class="img_array_10">
+
+                        <img src="https://i.ytimg.com/vi/DR2KIysYlbs/maxresdefault.jpg"/>
+                        <p class="side_p"> SAD! SAD! SAD!</p>
+                        <div class="p_array"><p>XXXTENTACION</p></div>
+                        <h3>If you listen to his music, you can explain in two words, "It's not hip-hop."
+                            He has so many different genres of music. When you listen to the tracks from
+                            his full-length album "17" that initially brought him to the mainstream, he does a
+                            depressing, emotional and calm piece of music that contrasts the mood with
+                            "Look At Me!" to the point that he feels the same person is right.
+                        </h3>
+                    </div>
+
+                </div>
+
+                <div class="content_array">
+                    <div class="img_array_11">
+                        <img src="https://i.ytimg.com/vi/Q8k5_MbZnnI/maxresdefault.jpg"/>
+                        <p class="side_p"> SAD! SAD! SAD!</p>
+                        <div class="p_array"><p>XXXTENTACION</p></div>
+                        <h3>
+                            In particular, if you listen to the songs of 17 or `?' you
+                            can see that they were influenced by punk rock or alternative rock.
+                            If you think about hip-hop, you might think of it, it's music based
+                            on alternative rock, punk rock, etc., and music based on instruments
+                            such as piano, acoustic guitar, etc., that doesn't mix hip-hop with hip-hop's
+                            original sound. This sets the difference between other rappers and even hip-hop
+                            virtuoso Kanye West said he was inspired by ``I haven't told you how much inspiration
+                            you've given me'' on Twitter since Tentasion was shot to death. His musical talent has been so
+                            unrivaled that there has been no and never will be any pop, Al&B and acoustic artists, including
+                            hip-hop, which is often represented by white music.
+                        </h3>
+                    </div>
+                </div>
+
+                <div class="content_array">
+                    <div class="img_array_12" style="margin-top:-20%;">
+                        <img src="https://pbs.twimg.com/media/DdqhqAbU0AA49ea.jpg"/>
+                        <p class="side_p"> SAD! SAD! SAD!</p>
+                        <div class="p_array"><p>XXXTENTACION</p></div>
+                        <H3>
+                            It also played Latin-based songs, the most popular genre in the recent
+                            pop market, titled 'I don't even speak spanish lol,' from the '?' album.
+                        </H3>
+                    </div>
+                </div>
+
+                <div class="content_array">
+                    <div class="img_array_13">
+                        <img src="https://i.redd.it/csyeinhq94g11.jpg"/>
+                        <div class="p_array"><p>XXXTENTACION</p></div>
+                        <h3>
+
+                            Tentasion's rap style features a flow of high-tones that seems to carry
+                            emotions and spit them out on the basis of solid vocalization. Born in 1998,
+                            he is one of his younger generation, but his voice sounds younger than his age.
+                            He sings as well as his rap skills. In particular, he featured in songs that were close to
+                            electronic pop, titled "A Again" by Miley Cyrus' brother, Noah Cyrus, which seems to
+                            be more interested in various genres such as rock music, pop songs, and Al & B rather
+                            than being tied to a single genre of hip-hop, and made it his own album.
+                        </h3>
+                    </div>
+                </div>
+                <div class="content_array">
+                    <div style="margin-top: -52%;"class="img_array_14">
+                        <img src="https://wav-phinf.pstatic.net/20170726_38/1501020679139hnyct_PNG/upload_Screen_Shot_2017-07-25_at_3.10.59_PM.png"/>
+                        <div class="p_array"><p>XXXTENTACION</p></div>
+                        <h3>
+                            The lyrics are also one of his differences with other rappers, with most of them
+                            writing extravagant lives such as money bragging, tea bragging and women bragging,
+                            while Tentasion takes out the sensibility of deep depression that lurks within him and writes
+                            it into the lyrics. I think these differentiated musical genres and lyrics have created the position
+                            of the current Ten Tasion.
+                        </h3>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+    <div id="section03">
+        <h1>ALBUM</h1>
         <div class="second_content">
 
             <div class="content_array">
@@ -230,15 +332,17 @@
             <br>
                         She once again cemented her position as a mainstream rapper, boasting her musically high perfection and receiving great acclaim from the public and critics, but it was her last album of her life three months later as she went on the way to not be able to return due to an unexpected robbery.
 <br>
-                        The music video for his song "SAD!" was released around 10:30 p.m. on June 28 in Korea. Watching the music video, the current hairstyle and tattooed tentacion appear at the funeral of the former hair-style tentacion, where the dead body of the tentacion is resurrected in a coffin and fights the tentacion. The old X who died here on a video with his old hairstyle means that the devil inside him doesn't die easily. Many people feel that this scene is a posthumous video. To give a detailed interpretation, the former hair-style tentacion, or the death-returning tentacion, is the violent tentacion at the time of "Look At Me!" and the tentacion facing him is the tentacion that reflects on the current self.       </h3>
+                        The music video for his song "SAD!" was released around 10:30 p.m. on June 28 in Korea. Watching the music video, the current hairstyle and tattooed tentacion appear at the funeral of the former hair-style tentacion, where the dead body of the tentacion is resurrected in a coffin and fights the tentacion. The old X who died here on a video with his old hairstyle means that the devil inside him doesn't die easily. Many people feel that this scene is a posthumous video. To give a detailed interpretation, the former hair-style tentacion, or the death-returning tentacion, is the violent tentacion at the time of "Look At Me!" and the tentacion facing him is the tentacion that reflects on the current self.
+                    </div>
+                </h3>
             </div>
         </div>
         <div class="content_array">
             <div class="img_array_9">
 <!--                <p class="side_p"> SAD! SAD! SAD!</p>-->
-                <img src="https://blackculturetv.files.wordpress.com/2018/12/5c076116381b6_xxx_skins_album_cover_texture-1541695623_5c0761165db73.jpg?w=930&h=450&crop=1"/>
-    <!--            <div class="p_array"><p>XXXTENTACION</p></div>
-    -->            <h3 class="h3_array">
+               <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f7/XXXTentacion_%E2%80%93_Skins.png/220px-XXXTentacion_%E2%80%93_Skins.png"/>
+                <!--            <div class="p_array"><p>XXXTENTACION</p></div>
+                -->            <h3 class="h3_array">
                 <div class="h3_p">
                     1 Introduction<br>
                     2 Guardian angel<br>
@@ -254,17 +358,126 @@
                 <div class="h3_content"><br>
                     Tentacion's third full-length album and posthumous album released on December 7, 2018.
                 </div>
-            </h3>   </div>
+            </h3>
+            </div>
         </div>
         </div>
-
-
-
         </div>
+    <!--3번째 -->
+    <div id="section04" style="margin-top:10px;">
+        <h1 style="text-align: center; margin-top:30px;">AFTER HIS DEATH</h1>
+        <img style="width:100%; height:auto; margin:0 auto;     display: inherit; max-width:400px; max-height:900px;" src="https://cdn.spinrilla.com/albums/79130/large/ace2c61c1b16a6778248.jpg?1531435297" />
+        <h3 style="width:93%; color:white;">
+            <br><br>
+            At around 3:30 p.m. on June 18, 2018,
+            X was shot dead at 5:30 p.m. by two unidentified men in a black Dodge Jr.
+            while driving out of a motorcycle shop in Miami's Deerfield Beach. When the first news came out,<br>
+            the fans could have had even a word of hope due to the news such as
+            "I'm being taken to the hospital because I don't have any breathing,"<br>
+            but it was finally pronounced dead after being taken to the hospital. Witnesses
+            say he was robbed of his Louis Vuitton bag and cash in the car.
+            Therefore, there is speculation that the murder was committed by a robber who sought money.<br>
+            <br><br>
+            Immediately after the incident, information about the suspect was released
+            through Florida sheriffs. The suspect was a two-man armed robber, and
+            the shooter wore a red mask. Based on this information, people found
+            a strong suspect who killed X on Instagram. Rapper Salier Kidd's Instagram
+            account, "Soldier.Kidd," posted a photo from Florida before the incident,
+            with two (Soldier Kidd himself and fellow Soldier Jojo) sitting on a car, and a
+            red mask on the passenger seat. In addition, the name of the album released
+            on May 2, 2018 is "XXX." Now, if you go into that account on June 20, 2018,
+            Goldier Kidd posted a video explaining that he wasn't the murderer of XXX
+            Tentacion and that he was paying his respects to his family, but many people
+            think that he killed X because his feelings are so clear.
+            <br><br>
+            But on June 21, only three days after his death, the real killer was caught.
+            It has been confirmed that Goldier Kid, who had been previously identified as a
+            criminal, was not , and it is assumed that the red mask and the duo were actually rumors.
+            Photos of mug shots and information about criminals are being posted on the Internet.
+            The 22-year-old tattooist, Dedrick D. Williams, is said to have been in and out of police stations
+            several times already for cocaine possession and gun possession. Michael Boatright,
+            who was indicted along with him, claims no testimony has been delivered to prove his innocence.
+            <br><br>
+            Aside from their controversial acts of life, many people lament the sudden
+            death of their children while they are building their position musically by
+            blossoming talent at a young age of 20. Many hip-hop musicians and international artists,
+            including Kanye West, Offset, Takeoff, Lil Pump, Lille Jan, Diplo, Steve Aoki, Lille Yati, Noah
+            Cyrus, Joy Badass, Denzel Curry, Kodak Black, J-Coll and Marshmallow, are also paying tribute
+            to him, who died so abruptly. Even more regrettable was the fact that he was shot two hours
+            later after posting his Instagram account that he was visiting Florida for a charity event.
+            <br><br>
+            His death is so shocking that some speculate that he may not have died, but
+            there is little evidence and is sufficiently rebuttable. The government made an
+            official announcement and even a Tentacion official and his mother acknowledged
+            his death. There seems to be such a conspiracy theory as much as his death is regrettable.
+            There are also many bad cases, such as posting such conspiracy theories on Facebook
+            and other websites and turning them into ads, taking advantage of the fact that shocked
+            enthusiasts have a real hope for such conspiracy theories. This conspiracy theory is nothing
+            more than a means of making money for bad people. If you are really a fan, don't believe in this
+            groundless conspiracy theory and let's mourn it.
+            <br><br>
+            The song 'SAD!' from his second album after
+            his death has topped the Billboard Hot 100 Chart. This is
+            the first time that the Billboard chart has topped since his death in
+            1997 (the eighth time in history). a billboard article
+            <br><br>
+            In the music video of "SAD!," he comes to the funeral of the former
+            Tentasion wearing clothes that are not considered funeral attire, which
+            shows he has no intention of accepting or understanding of his past violent
+            acts and appearances. This self-reflection, the Ten Tacion fights outside the
+            church where the funeral was going on, where the present Ten Tacion uses a
+            force of salt to easily subdue the old Tentacion. There are many opinions here
+            that the heart power is Naruto's Omaju.[16] In the end, what I wanted to say in this
+            music video was to say that Tentacion repented for his past wrongdoing, and was
+            born a new man different from the past.
+            <br><br>
+            It was all the more shocking to hear that rapper Jimmy Warppo, one of the
+            candidates for the 2018 XXL Freshman, was shot dead the same day.
+            <br><br>
+            He wrote a will last November, and all his legacy was given to his mother.
+            <br><br>
+            It is very similar to The Notorious B.I.G. that as a rapper, he died young,
+            shot dead by an unidentified man, and passed away before his fullness.
+            It is very similar to the high influence, the posthumous No. 1 spot on the
+            Billboard chart, and the fact that only two full-length albums have been released.
+        </h3>
     </div>
 
 
-                        <div class="footer"></div>
+    <div id="section05" style="margin-top:50px;">
+            <h1>ETC</h1>
+        <h3 style="color:white;">
+            SAD! (2018) - 1th<br>
+            Don't Cry (2018) - 5th<br>
+            <br>
+            Moonlight (2018) - 13th<br>
+            Falling Down (2018) - 13th<br>
+            Changes (2018) - 18th<br>
+            Jochelyn Flores (2017) - 19th<br>
+            Fuck Love (2018) - 28th<br>
+            Arms Around You (2018) - 28th<br>
+            Roll in Peace (2017) - 31th<br>
+            Look At Me! (2016) - 34th<br>
+            Everybody Dies in Their Nightmares (2017) - 42th<br><br>
+
+            The lame for a brake heart (why am I so in love) - 55th<br>
+            Hope (2018) - 70th<br>
+            Revenge (2017) - 77th<br>
+            NUMB (2018) - 80th<br>
+            Infinity (888) (2018) - 83th<br>
+            Pressure & Obsession (2017) - 91th<br>
+            Save Me (2017) - 94th<br>
+            Going Down! (2018) - 95th<br>
+            Carrie On (2017) - 95th<br>
+        </h3>
+    </div>
+        </div>
+
+
+
+</div>
+
+<div class="footer" style="margin-top:30px; width:100%; height:50px; text-align: center;"> <p style="color:white;">Copytight 2019.NO SUNG JUN. All rights reserved</p></div>
 
 <script>
     /* 메뉴바 FIXED */
