--- a/ripx/index.html
+++ b/ripx/index.html
@@ -56,12 +56,12 @@
 <div class="loading"><img style="width:100% ;height:100%;" src="https://i.ytimg.com/vi/ThG1lC7P824/maxresdefault.jpg"/></div>
 <div class="menu_box">
     <div class="menu_inner">
-        <div class="logo"><a href="#section01">FMW - ONEPAGE</a></div>
+        <div class="logo"></div>
         <ul>
             <li><a href="#section01">HE' LIFE</a></li>
             <li><a href="#section02">MUSIC STYLE</a></li>
             <li><a href="#section03">ALBUM</a></li>
-            <li><a href="#section04">AFTER HIS DEATH</a></li>
+            <li><a href="#section004">AFTER HIS DEATH</a></li>
             <li><a href="#section05">ETC</a></li>
         </ul>
     </div>
@@ -82,7 +82,7 @@
         </div>
 
 <div id="section01">
-   
+
     <h1>HE'S LIFE</h1>
         <div class="middle_content">
             <div class="img_content">
@@ -172,7 +172,7 @@
 
 
 </div>
-    <div id="section02" style="margin-top:300px;">
+    <div id="section02" >
         <h1>MUSIC STYLE</h1>
         <div class="middle_content" style="height:1900px;">
             <div class="img_content">
@@ -366,7 +366,7 @@
     <!--3번째 -->
     <div id="section04" style="margin-top:10px;">
         <h1 style="text-align: center; margin-top:30px;">AFTER HIS DEATH</h1>
-        <img style="width:100%; height:auto; margin:0 auto;     display: inherit; max-width:400px; max-height:900px;" src="https://cdn.spinrilla.com/albums/79130/large/ace2c61c1b16a6778248.jpg?1531435297" />
+        <img style="width:100%; height:auto; margin:0 auto;     display: inherit; max-width:400px; max-height:900px;" id="section004" src="https://cdn.spinrilla.com/albums/79130/large/ace2c61c1b16a6778248.jpg?1531435297" />
         <h3 style="width:93%; color:white;">
             <br><br>
             At around 3:30 p.m. on June 18, 2018,
