--- a/html_p/index.html
+++ b/html_p/index.html
@@ -66,7 +66,7 @@
                     <a style="font-size:60px; line-height: 1;">01</a> <a href="https://ehrm454.github.io/html_hellper">헬퍼 팬 페이지</a><br>
                     <a>CODE : HTML5 , CSS , JAVASCRIPT , JQUERY</a> <br>
                     <a>Importantly : 애니메이션 , 반응형 , css 효과 </a><br>
-                    <div class="ppt_contents_p2"><a>평소에 좋아하는 웹툰을 다른 사람에게 소개시켜주고 싶어 사이트를 구성하고 만들게 되엇습니다.
+                    <div class="ppt_contents_p2"><a>평소에 좋아하는 웹툰을 다른 사람에게 소개시켜주고 싶어 사이트를 구성하고 만들게 되었습니다.
                         <br> 레이아웃을 직업 짜고 이미지도 만들면서 설계하게 되어 레이아웃 , CSS , JQUERY 공부에 큰 도움이 되었습니다.</a></div>
                 </div>
             </div>
