--- a/html_p/index.html
+++ b/html_p/index.html
@@ -21,8 +21,8 @@
     <div class="introduction">
         <div id="me" class="set">
             <div class="me_intro">
-                <a class="intro">intro</a>
-                <h1 class="about">About myself</h1>
+                <a class="intro">About</a>
+                <h1 class="about">Myself</h1>
                 <div style="border-bottom: 3px solid white;padding-top: 8px;"></div>
                 <div style="margin-top:10px;"><a>
                     지금까지 만든 웹사이트 , 공부물과 노력들로 웹사이트를 제작하면서 많은 지식들을 배웠습니다. </a></div>
@@ -33,8 +33,8 @@
         </div>
         <div id="skill" class="set">
             <div class="skill_intro">
-                <a class="intro">intro</a>
-                <h1 class="about">About my Skill</h1>
+                <a class="intro">About</a>
+                <h1 class="about">My Skills</h1>
                 <div style="border-bottom: 3px solid white;padding-top: 8px;"></div>
                 <a style="color: white; font-family: sans-serif; font-weight: 500; font-size: 18px;">Github Link :
                     <a style="text-decoration: none;color: white;"href="https://github.com/ehrm454">https://github.com/ehrm454</a><br>
