--- a/html_p/index.html
+++ b/html_p/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/js.js"></script>
 </head>
-<body>
+<body style="overflow-x:hidden">
 <div class="main">
     <div class="banner">
-       <div class="banner_left">
+        <div class="banner_left">
             <a style="font-weight: 900;font-size: 77px;line-height: 62%;font-family: sans-serif;">2019 <br> Portfolio</a>
-       </div>
+        </div>
         <div class="banner_right">
             <a id="NSJ">노성준</a><br>
             <a>NO SUNG JUN</a><br>
@@ -26,8 +28,8 @@
                 <div style="border-bottom: 3px solid white;padding-top: 8px;"></div>
                 <div style="margin-top:10px;"><a>
                     지금까지 만든 웹사이트 , 공부물과 노력들로 웹사이트를 제작하면서 많은 지식들을 배웠습니다. </a></div>
-                   <div style="margin-top:30px;"> <a>제 재능을 낭비하지 않고 거기에 열정을 더해 사용하고<br> 부족한 점을 채우며
-                       항상 한 단계 더 성장하고 싶습니다.  </a></div> <div style="margin-top:30px;"><a>새로운 기술이 하루가 다르게 출시되고 개발되는<br>
+                <div style="margin-top:30px;"> <a>제 재능을 낭비하지 않고 거기에 열정을 더해 사용하고<br> 부족한 점을 채우며
+                    항상 한 단계 더 성장하고 싶습니다.  </a></div> <div style="margin-top:30px;"><a>새로운 기술이 하루가 다르게 출시되고 개발되는<br>
                 이런 변화하는 디지털 시대에서 <br>열정과 노력을 바탕으로 능력을 한껏 발휘하는게 저의 꿈입니다. </a></div>
             </div>
         </div>
@@ -38,38 +40,38 @@
                 <div style="border-bottom: 3px solid white;padding-top: 8px;"></div>
                 <a style="color: white; font-family: sans-serif; font-weight: 500; font-size: 18px;">Github Link :
                     <a style="text-decoration: none;color: white;"href="https://github.com/ehrm454">https://github.com/ehrm454</a><br>
-                <div class="skill_style">
-                         <a style="font-size: 19px; line-height: 1;">HTML5 </a><br><a> ☑ 레이아웃 <br>☑ 화면 구현 <br> ☑ 반응형 <br>☑ 모바일 페이지  </a><br>
+                    <div class="skill_style">
+                        <a style="font-size: 19px; line-height: 1;">HTML5 </a><br><a> ☑ 레이아웃 <br>☑ 화면 구현 <br> ☑ 반응형 <br>☑ 모바일 페이지  </a><br>
                     </div>
-                <div class="skill_style">
-                    <a style="font-size: 19px; line-height: 1;">css</a><br><a> ☑ 반응형 <br> ☑ @media 활용 <br> ☑ 애니메이션</a>
-                </div>
+                    <div class="skill_style">
+                        <a style="font-size: 19px; line-height: 1;">css</a><br><a> ☑ 반응형 <br> ☑ @media 활용 <br> ☑ 애니메이션</a>
+                    </div>
                     <div class="skill_style"><a style="font-size: 19px; line-height: 1;">  JavaScript , JSP  </a> <br>
                         <a>  ☑ 채팅 <br> ☑ 데이터베이스를 활용한 게시판 <br> ☑ 웹 게임 <br> ☑ SNS  </a><br>
                     </div>
                     <div class="skill_style"><a style="font-size: 19px; line-height: 1;">PHP</a><br>
                         <a>☑ SNS</a>
                     </div>
-                <div class="skill_style"><a style="font-size: 19px; line-height: 1;"> Database </a><br><a> ☑ Oracle  ☑ Mysql <br> ☑ 데이터베이스 설계 ☑ 구조 이해</a><br></div>
+                    <div class="skill_style"><a style="font-size: 19px; line-height: 1;"> Database </a><br><a> ☑ Oracle  ☑ Mysql <br> ☑ 데이터베이스 설계 ☑ 구조 이해</a><br></div>
                 </a></div>
         </div>
     </div>
     <div id="ppt" class="set">
         <div class="ppt_first">
-        <div class="ppt_header"><a style="display: block;opacity: .5;font-size: 27px;"> Portfolio </a><br>
-            <a style=" font-size: 60px; font-weight: 900;font-family: sans-serif;">My Study </a></div>
-        <div class="ppt_content">
-            <div class="ppt_contents">
+            <div class="ppt_header"><a style="display: block;opacity: .5;font-size: 27px;"> Portfolio </a><br>
+                <a style=" font-size: 60px; font-weight: 900;font-family: sans-serif;">My Study </a></div>
+            <div class="ppt_content">
+                <div class="ppt_contents">
 
-                <div class="ppt_img"><img src="img/hellper.PNG"> </div>
-                <div class="ppt_contents_p">
-                    <a style="font-size:60px; line-height: 1;">01</a> <a href="https://ehrm454.github.io/html_hellper">헬퍼 팬 페이지</a><br>
-                    <a>CODE : HTML5 , CSS , JAVASCRIPT , JQUERY</a> <br>
-                    <a>Importantly : 애니메이션 , 반응형 , css 효과 </a><br>
-                    <div class="ppt_contents_p2"><a>평소에 좋아하는 웹툰을 다른 사람에게 소개시켜주고 싶어 사이트를 구성하고 만들게 되었습니다.
-                        <br> 레이아웃을 직업 짜고 이미지도 만들면서 설계하게 되어 레이아웃 , CSS , JQUERY 공부에 큰 도움이 되었습니다.</a></div>
+                    <div class="ppt_img1"><img src="img/hellper.PNG"> </div>
+                    <div class="ppt_contents_p">
+                        <a style="font-size:60px; line-height: 1;">01</a> <a href="https://ehrm454.github.io/html_hellper">헬퍼 팬 페이지</a><br>
+                        <a>CODE : HTML5 , CSS , JAVASCRIPT , JQUERY</a> <br>
+                        <a>Importantly : 애니메이션 , 반응형 , css 효과 </a><br>
+                        <div class="ppt_contents_p2"><a>평소에 좋아하는 웹툰을 다른 사람에게 소개시켜주고 싶어 사이트를 구성하고 만들게 되었습니다.
+                            <br> 레이아웃을 직업 짜고 이미지도 만들면서 설계하게 되어 레이아웃 , CSS , JQUERY 공부에 큰 도움이 되었습니다.</a></div>
+                    </div>
                 </div>
-            </div>
                 <div class="ppt_table">
                     <table>
                         <tr>
@@ -110,7 +112,7 @@
             <div class="ppt_content">
                 <div class="ppt_contents">
 
-                    <div class="ppt_img"><img src="img/xxx.PNG" style=" float: right;"> </div>
+                    <div class="ppt_img2"><img src="img/xxx.PNG" style=" float: right;"> </div>
                     <div class="ppt_contents_p">
                         <a style="font-size:60px; line-height: 1;">02</a> <a href="https://ehrm454.github.io/ripx/">XXXTENTACION FAN PAGE</a><br>
                         <a>CODE : HTML5 , CSS , JAVASCRIPT , JQUERY</a> <br>
@@ -155,13 +157,13 @@
             <div class="ppt_content">
                 <div class="ppt_contents">
 
-                    <div class="ppt_img"><img src="img/jsp.PNG"> </div>
+                    <div class="ppt_img3"><img src="img/jsp.PNG"> </div>
                     <div class="ppt_contents_p">
                         <a style="font-size:60px; line-height: 1;">03</a> JSP 게시판<br>
                         <a>CODE : HTML5 , CSS , JAVASCRIPT </a> <br>
                         <a>Importantly : Oracle , Jsp  </a><br>
                         <div class="ppt_contents_p2"><a> 정보처리산업기사 자격증을 취득하면서 공부한 Jsp+Oracle을 토대로 게시판을 짰습니다.
-                            <br> 로그인 , 회원가입 , 카테고리 , 권한 , 글 목록 , 글 작성 등 게시판의 필수 기본 사항들의 구조를 직접 설계 및 구현했습니다.</div>
+                            <br> 로그인 , 회원가입 , 카테고리 , 권한 , 글 목록 , 글 작성 등 게시판의 필수 기본 사항들의 구조를 직접 설계 및 구현했습니다. </a></div>
                     </div>
                 </div>
                 <div class="ppt_table">
@@ -222,9 +224,9 @@
             </div>
         </div>
     </div>
-    </div>
-    <footer>
-        <div class="footer_one">Made by No sung jun</div>
-    </footer>
+</div>
+<footer>
+    <div class="footer_one">Made by No sung jun</div>
+</footer>
 </body>
 </html>
