--- a/html_p/index.html
+++ b/html_p/index.html
@@ -44,7 +44,7 @@
                         <a style="font-size: 19px; line-height: 1;">HTML5 </a><br><a> ☑ 레이아웃 <br>☑ 화면 구현 <br> ☑ 반응형 <br>☑ 모바일 페이지  </a><br>
                     </div>
                     <div class="skill_style">
-                        <a style="font-size: 19px; line-height: 1;">css</a><br><a> ☑ 반응형 <br> ☑ @media 활용 <br> ☑ 애니메이션</a>
+                        <a style="font-size: 19px; line-height: 1;">CSS</a><br><a> ☑ 반응형 <br> ☑ @media 활용 <br> ☑ 애니메이션</a>
                     </div>
                     <div class="skill_style"><a style="font-size: 19px; line-height: 1;">  JavaScript , JSP  </a> <br>
                         <a>  ☑ 채팅 <br> ☑ 데이터베이스를 활용한 게시판 <br> ☑ 웹 게임 <br> ☑ SNS  </a><br>
