--- a/html_p/index.html
+++ b/html_p/index.html
@@ -2,64 +2,96 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NSJ</title>
+    <title>Title</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/banner_img.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/js.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet">
 </head>
 <body style="overflow-x:hidden">
+<header></header>
+<div class="top"><a href ="#nav_top"><img src="img/top.png" alt="top"/> </a></div>
 <div class="main">
-    <div class="banner">
-        <div class="banner_left">
+    <div class="banner" id="nav_top">
+    <div class="banner_inner">
+        <div class="banner_left" >
             <a style="font-weight: 900;font-size: 77px;line-height: 62%;font-family: sans-serif;">2019 <br> Portfolio</a>
         </div>
         <div class="banner_right">
+            <div class="banner_right_a">
             <a id="NSJ">노성준</a><br>
             <a>NO SUNG JUN</a><br>
             <a>010-6551-3593</a><br>
             <a>2001. 11 . 01</a>
+            </div>
         </div>
+    </div>
+    <div class="banner_out">
+        <div class="banner_out_left">
+        <nav>
+            <div class="hover_1"><h2><a href="#">Index </a></h2></div>
+            <div class="hover_2"><h2><a href="#">Introduce </a></h2></div>
+            <div class="hover_3"><h2><a href="#">My Skills </a></h2></div>
+            <a href="#ppt1"><div class="hover_4" ><h2>Hellper_project</h2></div></a>
+            <a href="#ppt2"><div class="hover_5"><h2>xxxtentacion_project</h2></div></a>
+            <a href="#ppt3"><div class="hover_6"><h2>Board_project</h2></div></a>
+
+        </nav>
+        </div>
+        <div class="banner_out_right">
+            <div class="banner_img">
+                    <div id="banner_img1" class="banner_img_set" style=" z-index:91">
+                        <div style="position:relative;;"><img src="img/hellper.PNG" /></div>
+                    </div>
+                    <div id="banner_img2" class="banner_img_set">
+                        <div style="position:relative">    <img src="img/xxx.PNG" /></div>
+                    </div>
+                    <div id="banner_img3" class="banner_img_set">
+                        <div style="position:relative"><img src="img/board.PNG" /></div>
+                    </div>
+                <div class="intro_me">
+                    <a class="intro">About</a>
+                    <h1 class="about">Myself</h1>
+                    <div style="border-bottom: 3px solid white;padding-top: 8px;"></div>
+                    <div style="margin-top:10px;"><a>
+                        지금까지 만든 웹사이트 , 공부물과 노력들로 웹사이트를 제작하면서 많은 지식들을 배웠습니다. </a></div>
+                    <div style="margin-top:30px;"> <a>제 재능을 낭비하지 않고 거기에 열정을 더해 사용하고<br> 부족한 점을 채우며
+                        항상 한 단계 더 성장하고 싶습니다.  </a></div> <div style="margin-top:30px;"><a>새로운 기술이 하루가 다르게 출시되고 개발되는<br>
+                    이런 변화하는 디지털 시대에서 <br>열정과 노력을 바탕으로 능력을 한껏 발휘하는게 저의 꿈입니다. </a></div>
+                </div>
+                <div id="skills" >
+                    <div class="skill_intro">
+                        <a class="intro">About</a>
+                        <h1 class="about">My Skills</h1>
+                        <div style="border-bottom: 3px solid white;padding-top: 8px;"></div>
+                        <a style="font-family: sans-serif; font-weight: 500; font-size: 18px;">Github Link :
+                            <a style="text-decoration: none;"href="https://github.com/ehrm454">https://github.com/ehrm454</a><br>
+                            <div class="skill_style">
+                                <a  class="skill_tittle" >HTML5 </a><br><a> ☑ 레이아웃 <br>☑ 화면 구현 <br> ☑ 반응형 <br>☑ 모바일 페이지  </a><br>
+                            </div>
+                            <div class="skill_style">
+                                <a class="skill_tittle" >CSS</a><br><a> ☑ 반응형 <br> ☑ @media 활용 <br> ☑ 애니메이션</a>
+                            </div>
+                            <div class="skill_style"><a class="skill_tittle" >  JavaScript , JSP  </a> <br>
+                                <a>  ☑ 채팅 <br> ☑ 데이터베이스를 활용한 게시판 <br> ☑ 웹 게임 <br> ☑ SNS  </a><br>
+                            </div>
+                            <div class="skill_style"><a class="skill_tittle">PHP</a><br>
+                                <a>☑ SNS</a>
+                            </div>
+                            <div class="skill_style"><a class="skill_tittle"> Database </a><br><a> ☑ Oracle  ☑ Mysql <br> ☑ 데이터베이스 설계 ☑ 구조 이해</a><br></div>
+                        </a></div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     <div class="introduction">
         <div id="me" class="set">
-            <div class="me_intro">
-                <a class="intro">About</a>
-                <h1 class="about">Myself</h1>
-                <div style="border-bottom: 3px solid white;padding-top: 8px;"></div>
-                <div style="margin-top:10px;"><a>
-                    지금까지 만든 웹사이트 , 공부물과 노력들로 웹사이트를 제작하면서 많은 지식들을 배웠습니다. </a></div>
-                <div style="margin-top:30px;"> <a>제 재능을 낭비하지 않고 거기에 열정을 더해 사용하고<br> 부족한 점을 채우며
-                    항상 한 단계 더 성장하고 싶습니다.  </a></div> <div style="margin-top:30px;"><a>새로운 기술이 하루가 다르게 출시되고 개발되는<br>
-                이런 변화하는 디지털 시대에서 <br>열정과 노력을 바탕으로 능력을 한껏 발휘하는게 저의 꿈입니다. </a></div>
-            </div>
-        </div>
-        <div id="skill" class="set">
-            <div class="skill_intro">
-                <a class="intro">About</a>
-                <h1 class="about">My Skills</h1>
-                <div style="border-bottom: 3px solid white;padding-top: 8px;"></div>
-                <a style="color: white; font-family: sans-serif; font-weight: 500; font-size: 18px;">Github Link :
-                    <a style="text-decoration: none;color: white;"href="https://github.com/ehrm454">https://github.com/ehrm454</a><br>
-                    <div class="skill_style">
-                        <a style="font-size: 19px; line-height: 1;">HTML5 </a><br><a> ☑ 레이아웃 <br>☑ 화면 구현 <br> ☑ 반응형 <br>☑ 모바일 페이지  </a><br>
-                    </div>
-                    <div class="skill_style">
-                        <a style="font-size: 19px; line-height: 1;">CSS</a><br><a> ☑ 반응형 <br> ☑ @media 활용 <br> ☑ 애니메이션</a>
-                    </div>
-                    <div class="skill_style"><a style="font-size: 19px; line-height: 1;">  JavaScript , JSP  </a> <br>
-                        <a>  ☑ 채팅 <br> ☑ 데이터베이스를 활용한 게시판 <br> ☑ 웹 게임 <br> ☑ SNS  </a><br>
-                    </div>
-                    <div class="skill_style"><a style="font-size: 19px; line-height: 1;">PHP</a><br>
-                        <a>☑ SNS</a>
-                    </div>
-                    <div class="skill_style"><a style="font-size: 19px; line-height: 1;"> Database </a><br><a> ☑ Oracle  ☑ Mysql <br> ☑ 데이터베이스 설계 ☑ 구조 이해</a><br></div>
-                </a></div>
         </div>
     </div>
     <div id="ppt" class="set">
-        <div class="ppt_first">
-            <div class="ppt_header"><a style="display: block;opacity: .5;font-size: 27px;"> Portfolio </a><br>
-                <a style=" font-size: 60px; font-weight: 900;font-family: sans-serif;">My Study </a></div>
+        <div class="ppt_first" id="ppt1">
             <div class="ppt_content">
                 <div class="ppt_contents">
 
@@ -108,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div class="ppt_first">
+        <div class="ppt_first" id="ppt2">
             <div class="ppt_content">
                 <div class="ppt_contents">
 
@@ -153,11 +185,11 @@
                 </div>
             </div>
         </div>
-        <div class="ppt_first">
+        <div class="ppt_first" id="ppt3">
             <div class="ppt_content">
                 <div class="ppt_contents">
 
-                    <div class="ppt_img3"><img src="img/jsp.PNG"> </div>
+                    <div class="ppt_img3"><img src="img/board.PNG"> </div>
                     <div class="ppt_contents_p">
                         <a style="font-size:60px; line-height: 1;">03</a> JSP 게시판<br>
                         <a>CODE : HTML5 , CSS , JAVASCRIPT </a> <br>
