--- a/html_p/index.html
+++ b/html_p/index.html
@@ -110,7 +110,7 @@
 
                     <div class="ppt_img1"><img src="img/hellper.PNG"> </div>
                     <div class="ppt_contents_p">
-                        <a style="font-size:60px; line-height: 1;">01</a> <a href="https://ehrm454.github.io/html_hellper">헬퍼 팬 페이지</a><br>
+                        <a style="font-size:60px; line-height: 1;">01</a> <a style="font-size:28px;" href="https://ehrm454.github.io/html_hellper">Hellper fan page</a><br>
                         <a>CODE : HTML5 , CSS , JAVASCRIPT , JQUERY</a> <br>
                         <a>Importantly : 애니메이션 , 반응형 , css 효과 </a><br>
                         <div class="ppt_contents_p2"><a>평소에 좋아하는 웹툰을 다른 사람에게 소개시켜주고 싶어 사이트를 구성하고 만들게 되었습니다.
@@ -204,7 +204,7 @@
 
                     <div class="ppt_img3"><img src="img/board.PNG"> </div>
                     <div class="ppt_contents_p">
-                        <a style="font-size:60px; line-height: 1;">03</a> JSP 게시판<br>
+                        <a style="font-size:60px; line-height: 1;">03</a> <a href="https://github.com/ehrm454/board">JSP 게시판</a><br>
                         <a>CODE : HTML5 , CSS , JAVASCRIPT </a> <br>
                         <a>Importantly : Oracle , Jsp  </a><br>
                         <div class="ppt_contents_p2"><a> 정보처리산업기사 자격증을 취득하면서 공부한 Jsp+Oracle을 토대로 게시판을 짰습니다.
@@ -269,6 +269,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 <footer>
     <div class="footer_one">Made by No sung jun</div>
